--- a/hackntell/package.json
+++ b/hackntell/package.json
@@ -10,7 +10,8 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "express": "^4.16.3"
+    "express": "^4.16.3",
+    "path": "^0.12.7"
   },
   "devDependencies": {
     "chai": "^4.2.0",
